# trackclusterTU

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: clustering.rs  intersection.rs
doc/: README.md  output_directory.md  performance.md
docs/superpowers/specs/: 2026-04-01-three-prime-tolerance-design.md
examples/: README.md
examples/tu_minimal/: README.md  reads.bed
examples/tu_minimal/expected/: membership.tsv  tu_count.csv  tus.bed
examples/tu_multisample/: README.md  sampleA.bed  sampleB.bed  samples.tsv
examples/tu_multisample/expected/: group_matrix.tsv  membership.tsv  pooled.bed  sample_long.tsv  sample_matrix.tsv  tu_count.csv  tus.bed
src/: bam.rs  lib.rs  score.rs
src/cluster/: mod.rs  output.rs  representative.rs
src/count/: mod.rs
src/interval/: cluster_span.rs  intersect_sweep.rs  list_ops.rs  mod.rs  partition.rs  refine.rs  sort.rs
src/io/: bed.rs  gff.rs
src/model/: coord.rs  interval.rs  mod.rs  strand.rs  transcript.rs
src/tools/: bam_to_bed.rs  cluster_pipeline.rs  diagnose_missed_tus.rs  gff_to_bed.rs  mod.rs  trackclustertu.rs
src/tu/: mod.rs  multi.rs
tests/: trackclustertu_annotation.rs  trackclustertu_bam_to_bed.rs  trackclustertu_cli.rs  trackclustertu_fastq_rejected.rs  trackclustertu_gff_to_bed.rs  trackclustertu_min_tu_count.rs  trackclustertu_multisample.rs  trackclustertu_run.rs
tests/fixtures/: minimal.bed
