[package]
name = "trackcluster-rs"
version = "0.1.1"
edition = "2021"
default-run = "trackclustertu"
license = "MIT"
description = "Rust utilities for interval similarity and clustering (TrackCluster/TU)"
readme = "README.md"
repository = "https://github.com/lrslab/trackclusterTU"
homepage = "https://github.com/lrslab/trackclusterTU"
documentation = "https://docs.rs/trackclusterTU"
keywords = ["bioinformatics", "genomics", "interval", "clustering", "nanopore"]

include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "doc/**",
    "examples/**",
    "src/**",
    "benches/**",
    "tests/**",
]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.27", features = ["derive"] }
noodles = { version = "0.108.0", features = ["bam", "bgzf", "core", "sam"] }
rayon = "1.10.0"
thiserror = "2.0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.6.0"

[[bench]]
name = "intersection"
harness = false

[[bench]]
name = "clustering"
harness = false
